syntax = "proto3";

package pb;

option go_package = ".;pb";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string name = 2;
}

message ChatMessage {
  string from_user = 1;
  google.protobuf.Timestamp sent_at = 2;
  string text = 3;
}
